# 2026-1_CV

./: 1주차 과제.ipynb  README.md  pyproject.toml  week2_assignment.ipynb
src/2026_1_CV.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
